fix UI and fix route

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -39,8 +39,8 @@
                 <span>- OR -</span>
               </div>
 
-              <a href="/auth/google" class="btn btn-danger w-100">
-                🔐 Login with Google
+              <a href="/auth/google" class="btn hover:bg-gray-100 border rounded shadow w-100">
+                <img src="/images/logoGoogle.jpg" alt="Google Logo" style="height: 20px; margin-right: 8px;" />Login with Google
               </a>
 
               <p class="text-center mt-3 mb-0">
