--- a/views/perfume-detail.ejs
+++ b/views/perfume-detail.ejs
@@ -138,10 +138,10 @@
                     </div>
                     
                     <% if (user && comment.author._id.toString() === user._id.toString()) { %>
-                      <div class="ms-3">
-                        <button onclick="editComment('<%= comment._id %>', '<%= comment.rating %>', `<%= comment.content %>`)" class="btn btn-sm btn-warning mb-1">Edit</button>
-                        <form action="/perfumes/<%= perfume._id %>/comments/<%= comment._id %>?_method=DELETE" method="POST" class="d-inline">
-                          <button type="submit" onclick="return confirm('Are you sure you want to delete this review?')" class="btn btn-sm btn-danger">Delete</button>
+                      <div class="ms-3 d-flex flex-wrap gap-1">
+                        <button onclick="editComment('<%= comment._id %>', '<%= comment.rating %>', `<%= comment.content %>`)" class="btn btn-sm btn-warning">Edit</button>
+                        <form action="/perfumes/<%= perfume._id %>/comments/<%= comment._id %>?_method=DELETE" method="POST">
+                          <button type="submit" onclick="return confirm('Are you sure you want to delete this review?')" class="btn btn-sm btn-danger w-100">Delete</button>
                         </form>
                       </div>
                     <% } %>
